RESOLVED FIXED309690
[Site Isolation] about-url-host.html is failing
https://bugs.webkit.org/show_bug.cgi?id=309690
Summary [Site Isolation] about-url-host.html is failing
rupin
Reported 2026-03-11 10:02:28 PDT
[Site Isolation] about-url-host.html is failing
Attachments
Radar WebKit Bug Importer
Comment 1 2026-03-11 10:02:33 PDT
rupin
Comment 2 2026-03-11 15:19:06 PDT
EWS
Comment 3 2026-03-16 17:07:33 PDT
Committed 309359@main (fb9f3322fb79): <https://commits.webkit.org/309359@main> Reviewed commits have been landed. Closing PR #60399 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.